[package]
name = "bupt_news_rss"
version = "0.2.0"
authors = ["WangZekun <wzekin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
reqwest = "0.9"
serde_json = "1.0"
rss = "1.7.0"
chrono = "0.4"
